--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
                 </div>
             </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </body>
 </html>
